Fix randomly overlapping elements in unique item view in IE7 by setting a position.

--- a/src/com/googlecode/barongreenback/shared/style.less
+++ b/src/com/googlecode/barongreenback/shared/style.less
@@ -80,8 +80,13 @@ input.delete, input.stop, input.reset, input.resetAll, input.deleteAll {
     .btn.danger;
 }
 
+.fixIE7Overlapping {
+    position: relative;
+}
+
 div.nameValue {
     vertical-align: top;
+    .fixIE7Overlapping;
 }
 
 div.control, div.nameValue {
